diseño de login-registro primer modulo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="contrasena_registro">Ingrese una contraseña</string>
     <string name="confirmar_contrasena">Escriba nuevamente su contraseña</string>
     <string name="registrarse">Registrarse</string>
+    <string name="volver_registro_a_login">Volver a Inicio de Sesion</string>
 </resources>
